src/packaged/main/default/objects/BillingTerms__c/fields/AutomatedBilling__c.field-meta.xml
<CustomField>
    <fullName>AutomatedBilling__c</fullName>
    <description>Enables automated processing of time entries for this Account.</description>
    <inlineHelpText>Enables automated invoicing for this Account</inlineHelpText>
    <label>Automated Billing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>