src/packaged/main/default/objects/BillingTerms__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description>Individual Payment Terms that apply for this Account. If not blank, the value will be printed on the Invoice.</description>
    <inlineHelpText>Enter individual Payment Terms that will be printed on the Invoice.</inlineHelpText>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>