src/packaged/main/default/objects/BillingTerms__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Start date of this billing terms</description>
    <inlineHelpText>Start date of this billing terms</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>