src/packaged/main/default/objects/BillingTerms__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>End date of this billing terms</description>
    <inlineHelpText>End Date of this billing terms</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>