src/packaged/main/default/objects/BillingTerms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BillingPeriodicy__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>ValidTo__c</columns>
    <columns>PaymentTerms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>